@@ -4,7 +4,19 @@
 	<groupId>org.alfresco.tas</groupId>
 	<artifactId>utility</artifactId>
 	<name>alfresco-tas-utility</name>
-	<version>1.0.33-SNAPSHOT</version>
+	<version>2.0.2-SNAPSHOT</version>
+	<organization>
+		<name>Alfresco Software</name>
+		<url>http://www.alfresco.com/</url>
+	</organization>
+	<developers>
+		<developer>
+			<name>Paul Brodner</name>
+			<roles>
+				<role>Test Automation Architect</role>
+			</roles>
+		</developer>
+	</developers>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.build.sourceVersion>1.8</maven.build.sourceVersion>
@@ -12,17 +24,18 @@
 		<spring.version>4.3.11.RELEASE</spring.version>
 		<suiteXmlFile>src/test/resources/unit-test.xml</suiteXmlFile>
 		<testNG.version>6.9.10</testNG.version>
-		<dataPrep.version>1.32</dataPrep.version>
+		<dataPrep.version>2.0</dataPrep.version>
 		<slf4j.version>1.7.2</slf4j.version>
-		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
+		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
 		<maven-remote-resources.version>1.5</maven-remote-resources.version>
 		<extentreports.version>2.41.2</extentreports.version>
 		<google.guava.version>23.0</google.guava.version>
 		<jackson-databind.version>2.4.4</jackson-databind.version>
 		<org.jvnet.version>0.6.5</org.jvnet.version>
-		<javax.mail.version>1.5.1</javax.mail.version>
+		<javax.mail.version>1.6.2</javax.mail.version>
 		<seleniumjava.version>3.7.1</seleniumjava.version>
 		<yandex.qatools.version>1.18</yandex.qatools.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<scm>
@@ -58,7 +71,7 @@
 				<plugin>
 					<artifactId>maven-release-plugin</artifactId>
 					<version>${maven-release.version}</version>
-					<configuration>					
+					<configuration>
 						<tagNameFormat>v@{project.version}</tagNameFormat>
 					</configuration>
 				</plugin>
@@ -83,13 +96,14 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>${java.version}</release>
+					<showWarnings>true</showWarnings>
+					<showDeprecation>true</showDeprecation>
 				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.1</version>
+				<version>3.0.0-M1</version>
 				<executions>
 					<execution>
 						<id>default-deploy</id>
@@ -104,12 +118,15 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19.1</version>
+				<version>3.0.0-M2</version>
 				<configuration>
 					<skipTests>true</skipTests>
 					<suiteXmlFiles>
 						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
 					</suiteXmlFiles>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
 				</configuration>
 			</plugin>
 
@@ -129,6 +146,42 @@
 					</includes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>3.0.0-M2</version>
+				<executions>
+					<execution>
+						<id>enforce-maven</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireMavenVersion>
+									<version>3.3</version>
+								</requireMavenVersion>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <doclint>none</doclint>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+           </plugin>
 		</plugins>
 
 		<resources>
@@ -139,7 +192,7 @@
 				</includes>
 			</resource>
 		</resources>
-	
+
 	</build>
 	<dependencies>
 		<!--Guava is a suite of core and expanded libraries that include utility 
@@ -221,11 +274,34 @@
 			<version>${jackson-databind.version}</version>
 		</dependency>
 
-		<!-- JAXB -->
+		<!-- JAXB in java 8, removed in java 11 -->
+		<!-- http://openjdk.java.net/jeps/320#Java-EE-modules -->
 		<dependency>
 			<groupId>org.jvnet.jaxb2_commons</groupId>
 			<artifactId>jaxb2-basics</artifactId>
 			<version>${org.jvnet.version}</version>
+		</dependency>
+
+		<!-- JAXB to fix javax in Java11 -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 
 		<!-- Jolokia used for interacting with JMX though proxy -->
